testing/tests/ui/duplicated_template_attribute.stderr
error: duplicated 'template' attribute
 --> tests/ui/duplicated_template_attribute.rs:8:3
  |
8 | #[template(
  |   ^^^^^^^^
